--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
                 "when your app is running `clientLoader` functions on hydration. " +
                 "Check out https://remix.run/route/hydrate-fallback for more information."
               );
-            </script><link rel="modulepreload" href="/assets/manifest-aeb55306.js"/><link rel="modulepreload" href="/assets/entry.client-uBC0Z2YE.js?client-route=1"/><link rel="modulepreload" href="/assets/jsx-runtime-iDN_6-uG.js"/><link rel="modulepreload" href="/assets/components-xKLyvRr5.js"/><link rel="modulepreload" href="/assets/root-6bjjQ4I4.js?client-route=1"/><script>window.__remixContext = {"url":"/","basename":"/","state":{"loaderData":{"root":null,"routes/_index":null},"actionData":null,"errors":null},"future":{"v3_fetcherPersist":false,"v3_relativeSplatPath":false,"v3_throwAbortReason":false},"isSpaMode":true};</script><script type="module" async="">import "/assets/manifest-aeb55306.js";
-import * as route0 from "/assets/root-6bjjQ4I4.js?client-route=1";
+            </script><link rel="modulepreload" href="/bakutan-memory-archive/assets/manifest-b6b4a568.js"/><link rel="modulepreload" href="/bakutan-memory-archive/assets/entry.client-GWC4njxz.js?client-route=1"/><link rel="modulepreload" href="/bakutan-memory-archive/assets/jsx-runtime-iDN_6-uG.js"/><link rel="modulepreload" href="/bakutan-memory-archive/assets/components-aPnSwpbK.js"/><link rel="modulepreload" href="/bakutan-memory-archive/assets/root--X28ZbXU.js?client-route=1"/><script>window.__remixContext = {"url":"/bakutan-memory-archive/","basename":"/bakutan-memory-archive/","state":{"loaderData":{"root":null,"routes/_index":null},"actionData":null,"errors":null},"future":{"v3_fetcherPersist":false,"v3_relativeSplatPath":false,"v3_throwAbortReason":false},"isSpaMode":true};</script><script type="module" async="">import "/bakutan-memory-archive/assets/manifest-b6b4a568.js";
+import * as route0 from "/bakutan-memory-archive/assets/root--X28ZbXU.js?client-route=1";
 window.__remixRouteModules = {"root":route0};
 
-import("/assets/entry.client-uBC0Z2YE.js?client-route=1");</script></main></body></html>
+import("/bakutan-memory-archive/assets/entry.client-GWC4njxz.js?client-route=1");</script></main></body></html>
