--- a/404.html
+++ b/404.html
@@ -2,11 +2,13 @@
 <html lang="en"><head><meta charSet="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/><title>Loading...</title></head><body><main style="font-family:system-ui, sans-serif;padding:2rem"><script>
               console.log(
                 "💿 Hey developer 👋. You can provide a way better UX than this " +
-                "when your app is running `clientLoader` functions on hydration. " +
-                "Check out https://remix.run/route/hydrate-fallback for more information."
+                "when your app is loading JS modules and/or running `clientLoader` " +
+                "functions. Check out https://remix.run/route/hydrate-fallback " +
+                "for more information."
               );
-            </script><link rel="modulepreload" href="/bakutan-memory-archive/assets/manifest-22a679b7.js"/><link rel="modulepreload" href="/bakutan-memory-archive/assets/entry.client-GWC4njxz.js?client-route=1"/><link rel="modulepreload" href="/bakutan-memory-archive/assets/jsx-runtime-iDN_6-uG.js"/><link rel="modulepreload" href="/bakutan-memory-archive/assets/components-aPnSwpbK.js"/><link rel="modulepreload" href="/bakutan-memory-archive/assets/root-dSRUqbV6.js?client-route=1"/><script>window.__remixContext = {"url":"/bakutan-memory-archive/","basename":"/bakutan-memory-archive/","state":{"loaderData":{"root":null,"routes/_index":null},"actionData":null,"errors":null},"future":{"v3_fetcherPersist":false,"v3_relativeSplatPath":false,"v3_throwAbortReason":false},"isSpaMode":true};</script><script type="module" async="">import "/bakutan-memory-archive/assets/manifest-22a679b7.js";
-import * as route0 from "/bakutan-memory-archive/assets/root-dSRUqbV6.js?client-route=1";
+            </script><link rel="modulepreload" href="/bakutan-memory-archive/assets/manifest-f71feb4b.js"/><link rel="modulepreload" href="/bakutan-memory-archive/assets/entry.client-yeDNkmli.js"/><link rel="modulepreload" href="/bakutan-memory-archive/assets/jsx-runtime-Qx4uyPea.js"/><link rel="modulepreload" href="/bakutan-memory-archive/assets/components-DgBabXgl.js"/><link rel="modulepreload" href="/bakutan-memory-archive/assets/root-DSdZB26D.js"/><script>window.__remixContext = {"basename":"/bakutan-memory-archive/","future":{"v3_fetcherPersist":false,"v3_relativeSplatPath":false,"v3_throwAbortReason":false,"v3_routeConfig":false,"v3_singleFetch":false,"v3_lazyRouteDiscovery":false,"unstable_optimizeDeps":false},"isSpaMode":true,"state":{"loaderData":{"root":null,"routes/_index":null},"actionData":null,"errors":null}};</script><script type="module" async="">import "/bakutan-memory-archive/assets/manifest-f71feb4b.js";
+import * as route0 from "/bakutan-memory-archive/assets/root-DSdZB26D.js";
+
 window.__remixRouteModules = {"root":route0};
 
-import("/bakutan-memory-archive/assets/entry.client-GWC4njxz.js?client-route=1");</script></main></body></html>
+import("/bakutan-memory-archive/assets/entry.client-yeDNkmli.js");</script></main></body></html>
