--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
                 "functions. Check out https://remix.run/route/hydrate-fallback " +
                 "for more information."
               );
-            </script><link rel="modulepreload" href="/bakutan-memory-archive/assets/manifest-f71feb4b.js"/><link rel="modulepreload" href="/bakutan-memory-archive/assets/entry.client-yeDNkmli.js"/><link rel="modulepreload" href="/bakutan-memory-archive/assets/jsx-runtime-Qx4uyPea.js"/><link rel="modulepreload" href="/bakutan-memory-archive/assets/components-DgBabXgl.js"/><link rel="modulepreload" href="/bakutan-memory-archive/assets/root-DSdZB26D.js"/><script>window.__remixContext = {"basename":"/bakutan-memory-archive/","future":{"v3_fetcherPersist":false,"v3_relativeSplatPath":false,"v3_throwAbortReason":false,"v3_routeConfig":false,"v3_singleFetch":false,"v3_lazyRouteDiscovery":false,"unstable_optimizeDeps":false},"isSpaMode":true,"state":{"loaderData":{"root":null,"routes/_index":null},"actionData":null,"errors":null}};</script><script type="module" async="">import "/bakutan-memory-archive/assets/manifest-f71feb4b.js";
-import * as route0 from "/bakutan-memory-archive/assets/root-DSdZB26D.js";
+            </script><link rel="modulepreload" href="/bakutan-memory-archive/assets/manifest-c566587b.js"/><link rel="modulepreload" href="/bakutan-memory-archive/assets/entry.client-BTqFGC35.js"/><link rel="modulepreload" href="/bakutan-memory-archive/assets/components-DYI7IJ3_.js"/><link rel="modulepreload" href="/bakutan-memory-archive/assets/root-CmpKdRx3.js"/><script>window.__remixContext = {"basename":"/bakutan-memory-archive/","future":{"v3_fetcherPersist":false,"v3_relativeSplatPath":false,"v3_throwAbortReason":false,"v3_routeConfig":false,"v3_singleFetch":false,"v3_lazyRouteDiscovery":false,"unstable_optimizeDeps":false},"isSpaMode":true,"state":{"loaderData":{"root":null,"routes/_index":null},"actionData":null,"errors":null}};</script><script type="module" async="">import "/bakutan-memory-archive/assets/manifest-c566587b.js";
+import * as route0 from "/bakutan-memory-archive/assets/root-CmpKdRx3.js";
 
 window.__remixRouteModules = {"root":route0};
 
-import("/bakutan-memory-archive/assets/entry.client-yeDNkmli.js");</script></main></body></html>
+import("/bakutan-memory-archive/assets/entry.client-BTqFGC35.js");</script></main></body></html>
